// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart Should render correctly snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-5ow6k3"
      >
        <a
          href="/preview"
        >
          <img
            alt="Don't make me think"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="172"
            src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=384&q=75 2x"
            style="color: transparent; border-radius: 5px; min-height: 172px; max-height: 172px;"
            width="130"
          />
        </a>
        <p
          class="chakra-text css-0"
        >
          Don't Make Me Think
        </p>
        <div
          class="css-k008qs"
        >
          <p
            class="chakra-text css-0"
          >
            Steve Krug
            ,
          </p>
          <p
            class="chakra-text css-0"
          >
            2000
          </p>
        </div>
        <div
          class="css-k008qs"
        >
          <p
            class="chakra-text css-0"
          >
            4.5
            /
          </p>
          <p
            class="chakra-text css-c5z1pm"
          >
            5
          </p>
        </div>
        <button
          aria-label="Heart icon"
          class="chakra-button css-ujxaga"
          data-testid="update-favorite-cart"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-5ow6k3"
    >
      <a
        href="/preview"
      >
        <img
          alt="Don't make me think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="172"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=384&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=384&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 172px; max-height: 172px;"
          width="130"
        />
      </a>
      <p
        class="chakra-text css-0"
      >
        Don't Make Me Think
      </p>
      <div
        class="css-k008qs"
      >
        <p
          class="chakra-text css-0"
        >
          Steve Krug
          ,
        </p>
        <p
          class="chakra-text css-0"
        >
          2000
        </p>
      </div>
      <div
        class="css-k008qs"
      >
        <p
          class="chakra-text css-0"
        >
          4.5
          /
        </p>
        <p
          class="chakra-text css-c5z1pm"
        >
          5
        </p>
      </div>
      <button
        aria-label="Heart icon"
        class="chakra-button css-ujxaga"
        data-testid="update-favorite-cart"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-iz364c"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Cart Should render correctly snapshot with empty image url 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-5ow6k3"
      >
        <a
          href="/preview"
        >
          <img
            alt="Don't make me think"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="172"
            src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=384&q=75 2x"
            style="color: transparent; border-radius: 5px; min-height: 172px; max-height: 172px;"
            width="130"
          />
        </a>
        <p
          class="chakra-text css-0"
        >
          Don't Make Me Think
        </p>
        <div
          class="css-k008qs"
        >
          <p
            class="chakra-text css-0"
          >
            Steve Krug
            ,
          </p>
          <p
            class="chakra-text css-0"
          >
            2000
          </p>
        </div>
        <div
          class="css-k008qs"
        >
          <p
            class="chakra-text css-0"
          >
            4.5
            /
          </p>
          <p
            class="chakra-text css-c5z1pm"
          >
            5
          </p>
        </div>
        <button
          aria-label="Heart icon"
          class="chakra-button css-ujxaga"
          data-testid="update-favorite-cart"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-5ow6k3"
    >
      <a
        href="/preview"
      >
        <img
          alt="Don't make me think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="172"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=384&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLt7GmF2%2Fplace-holder.webp&w=384&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 172px; max-height: 172px;"
          width="130"
        />
      </a>
      <p
        class="chakra-text css-0"
      >
        Don't Make Me Think
      </p>
      <div
        class="css-k008qs"
      >
        <p
          class="chakra-text css-0"
        >
          Steve Krug
          ,
        </p>
        <p
          class="chakra-text css-0"
        >
          2000
        </p>
      </div>
      <div
        class="css-k008qs"
      >
        <p
          class="chakra-text css-0"
        >
          4.5
          /
        </p>
        <p
          class="chakra-text css-c5z1pm"
        >
          5
        </p>
      </div>
      <button
        aria-label="Heart icon"
        class="chakra-button css-ujxaga"
        data-testid="update-favorite-cart"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-iz364c"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
